objects/pse__Timecard_API_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Manages timecards sent to a third-party application.</description>
    <fields>
        <fullName>pse__Earnings_Code_Assignment__c</fullName>
        <description>The API name of the field used to send earnings code information through the PSA Timecards API for timecards logged against assignments.</description>
        <inlineHelpText>The API name of the field used to send earnings code information through the PSA Timecards API for timecards logged against assignments.</inlineHelpText>
        <label>Earnings Code (Assignment)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Earnings_Code_Project__c</fullName>
        <description>The API name of the field used to send earnings code information through the PSA Timecards API for timecards logged against global projects.</description>
        <inlineHelpText>The API name of the field used to send earnings code information through the PSA Timecards API for timecards logged against global projects.</inlineHelpText>
        <label>Earnings Code (Project)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_Project_Type_From_Post_Response__c</fullName>
        <description>Uses Project Type to filter out timecards from the response. The value is a comma separated list of project types.</description>
        <inlineHelpText>Uses Project Type to filter out timecards from the response. The value is a comma separated list of project types.</inlineHelpText>
        <label>Exclude Project Type from POST Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Timecard API Settings</label>
</CustomObject>